# Contracts

./: .gitignore  BUILD  Jenkinsfile  Jenkinsfilenew  Makefile  README.md  WORKSPACE  a.sh  artifacts.txt  build_and_copy_new.sh  copy_cc_libs_and_sources.sh  copy_gen_libs.sh  copy_go_libs_and_sources.sh  copy_java_libs_and_sources.sh  copy_java_libs_and_sources_new.sh  copy_python_libs_and_sources.sh  generate_and_upload.sh  generate_and_upload_new.sh  generate_mocks.sh  go.mod  go.sum  job_pool.sh  local_java_install.sh  new_publish.sh  new_upload.sh  old_ws  pom.xml  publish.sh  upgrade_minor_version.sh  upgrade_patch_version.sh  upload.sh
AuthService/: BUILD.bazel  auth_service.proto
CampaignService/: BUILD.bazel  campaign_service.proto
Common/: BUILD.bazel  activities.proto  ai_enums.proto  crop_enums.proto  entities.proto  enums.proto  errors.proto  event.proto  event_reference.proto  geo_common.proto  geo_enums.proto  headers.proto  loyalty_enums.proto  reward_enums.proto  tags.proto  time_slot.proto  user_details.proto  utils.proto
CommunicationEngine/: BUILD.bazel  communication_engine.proto
EventPortal/: BUILD.bazel  event_portal.proto
LocationService/: BUILD.bazel  location_service.proto
MessageBus/: BUILD.bazel  mb.proto
ServiceProviderManagementService/: BUILD.bazel  service_provider_management_service.proto
Workflows/GeneralGoWorkflows/: BUILD.bazel  general_go_workflows.proto
output/: tag.txt
tools/: generated_files.txt
