load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

# Proto definitions
proto_library(
    name = "auth_service_proto",
    srcs = ["auth_service.proto"],
    deps = [
        "//Common:common_enums_proto",
        "//Common:headers_proto",
        "//Common:entities_proto",
    ]
)

cc_proto_library(
    name = "auth_service_cc_proto",
    deps = [":auth_service_proto"],
)

#cc_grpc_library(
#    name = "auth_service_cc_grpc",
#    srcs = [":auth_service_proto"],
#    gprc_only = True,
#    deps = [":auth_service_cc_proto"],
#)

java_proto_library(
    name = "auth_service_java_proto",
    deps = [":auth_service_proto"],
)

java_grpc_library(
    name = "auth_service_java_grpc",
    srcs = [":auth_service_proto"],
    deps = [":auth_service_java_proto"],
)

go_proto_library(
    name = "auth_service_go_proto",

    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "code.nurture.farm/Core/Contracts/AuthService/Gen/GoAuthService",

    protos = [":auth_service_proto",],
    deps = [
        "//Common:common_enums_all_go_proto",
    ],
)
