load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library", "py_grpc_library")

package(default_visibility = ["//visibility:public"])


# Proto definitions
proto_library(
    name = "common_enums_proto",
    srcs = ["enums.proto"],
)

proto_library(
    name = "reward_enums_proto",
    srcs = ["reward_enums.proto"],
)

proto_library(
    name = "loyalty_enums_proto",
    srcs = ["loyalty_enums.proto"],
)

proto_library(
    name = "time_slot_proto",
    srcs = ["time_slot.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:duration_proto",
    ]
)

proto_library(
    name = "activities_proto",
    srcs = ["activities.proto"],
    deps = [
        ":common_enums_proto",
        ":time_slot_proto"
    ],
)

proto_library(
    name = "entities_proto",
    srcs = ["entities.proto"],
    deps = [
        ":common_enums_proto",
        "@com_google_protobuf//:timestamp_proto",
        ":time_slot_proto"
    ],
)


proto_library(
    name = "event_reference_proto",
    srcs = ["event_reference.proto"],
    deps = [":common_enums_proto",
            "@com_google_protobuf//:timestamp_proto",],
)

proto_library(
    name = "errors_proto",
    srcs = ["errors.proto"]
)

proto_library(
    name = "tags_proto",
    srcs = ["tags.proto"]
)

proto_library(
    name = "utils_proto",
    srcs = ["utils.proto"],
    deps = [
        ":common_enums_proto",
        ":errors_proto",
        ":headers_proto",
    ],
)

proto_library(
    name = "headers_proto",
    srcs = ["headers.proto"],
    deps = [
            ":common_enums_proto",
            ":entities_proto",
            "@com_google_protobuf//:timestamp_proto"
        ],
)

proto_library(
    name = "user_details_proto",
    srcs = ["user_details.proto"]
)

proto_library(
    name = "crop_enums_proto",
    srcs = ["crop_enums.proto"],
)

proto_library(
    name = "geo_enums_proto",
    srcs = ["geo_enums.proto"],
)
proto_library(
    name = "geo_common_proto",
    srcs = ["geo_common.proto"],
    deps = [
                ":geo_enums_proto",
                ":common_enums_proto",
                ":time_slot_proto"
        ],
)

proto_library(
    name = "ai_enums_proto",
    srcs = ["ai_enums.proto"],
)

# CC definitions
cc_proto_library(
    name = "common_enums_cc_proto",
    deps = [":common_enums_proto",],
)

cc_proto_library(
    name = "reward_enums_cc_proto",
    deps = [":reward_enums_proto",],
)

cc_proto_library(
    name = "loyalty_enums_cc_proto",
    deps = [":loyalty_enums_proto",],
)


cc_proto_library(
    name = "time_slot_cc_proto",
    deps = [":time_slot_proto",],
)

cc_proto_library(
    name = "activities_cc_proto",
    deps = [":activities_proto",]
)

cc_proto_library(
    name = "entities_cc_proto",
    deps = [":entities_proto",]
)

cc_proto_library(
    name = "event_reference_cc_proto",
    deps = [":event_reference_proto",],
)

cc_proto_library(
    name = "errors_cc_proto",
    deps = [":errors_proto",],
)

cc_proto_library(
    name = "utils_cc_proto",
    deps = [":utils_proto", ],
)

cc_proto_library(
    name = "headers_cc_proto",
    deps = [":headers_proto", ],
)

cc_proto_library(
    name = "user_details_cc_proto",
    deps = [":user_details_proto", ],
)

cc_proto_library(
    name = "crop_enums_cc_proto",
    deps = [":crop_enums_proto",],
)

cc_proto_library(
     name = "geo_enums_cc_proto",
     deps = [":geo_enums_proto",],
 )

cc_proto_library(
    name = "geo_common_cc_proto",
    deps = [":geo_common_proto",],
)

cc_proto_library(
    name = "ai_enums_cc_proto",
    deps = [":ai_enums_proto",],
)

# CC GRPC libraries
cc_grpc_library(
    name = "common_enums_cc_grpc",
    srcs = [":common_enums_proto"],
    grpc_only = True,
    deps = [":common_enums_cc_proto"],
)

cc_grpc_library(
    name = "reward_enums_cc_grpc",
    srcs = [":reward_enums_proto"],
    grpc_only = True,
    deps = [":reward_enums_cc_proto"],
)

cc_grpc_library(
    name = "loyalty_enums_cc_grpc",
    srcs = [":loyalty_enums_proto"],
    grpc_only = True,
    deps = [":loyalty_enums_cc_proto"],
)

cc_grpc_library(
    name = "time_slot_cc_grpc",
    srcs = [":time_slot_proto"],
    grpc_only = True,
    deps = [":time_slot_cc_proto"],
)

cc_grpc_library(
    name = "activities_cc_grpc",
    srcs = [":activities_proto"],
    grpc_only = True,
    deps = [":activities_cc_proto"],
)

cc_grpc_library(
    name = "entities_cc_grpc",
    srcs = [":entities_proto"],
    grpc_only = True,
    deps = [":entities_cc_proto"],
)

cc_grpc_library(
    name = "event_reference_cc_grpc",
    srcs = [":event_reference_proto"],
    grpc_only = True,
    deps = [":event_reference_cc_proto"],
)

cc_grpc_library(
    name = "errors_cc_grpc",
    srcs = [":errors_proto"],
    grpc_only = True,
    deps = [":errors_cc_proto"],
)

cc_grpc_library(
    name = "utils_cc_grpc",
    srcs = [":utils_proto"],
    grpc_only = True,
    deps = [":utils_cc_proto"],
)

cc_grpc_library(
    name = "headers_cc_grpc",
    srcs = [":headers_proto"],
    grpc_only = True,
    deps = [":headers_cc_proto"],
)

cc_grpc_library(
    name = "user_details_cc_grpc",
    srcs = [":user_details_proto"],
    grpc_only = True,
    deps = [":user_details_cc_proto"],
)

cc_grpc_library(
    name = "crop_enums_cc_grpc",
    srcs = [":crop_enums_proto"],
    grpc_only = True,
    deps = [":crop_enums_cc_proto"],
)

cc_grpc_library(
    name = "geo_enums_cc_grpc",
    srcs = [":geo_enums_proto"],
    grpc_only = True,
    deps = [":geo_enums_cc_proto"],
)

cc_grpc_library(
    name = "geo_common_cc_grpc",
    srcs = [":geo_common_proto"],
    grpc_only = True,
    deps = [":geo_common_cc_proto"],
)

cc_grpc_library(
    name = "ai_enums_cc_grpc",
    srcs = [":ai_enums_proto"],
    grpc_only = True,
    deps = [":ai_enums_cc_proto"],
)

# Java definitions
java_proto_library(
    name = "common_enums_java_proto",
    deps = [":common_enums_proto",],
)

java_proto_library(
    name = "reward_enums_java_proto",
    deps = [":reward_enums_proto",],
)

java_proto_library(
    name = "loyalty_enums_java_proto",
    deps = [":loyalty_enums_proto",],
)

java_proto_library(
    name = "time_slot_java_proto",
    deps = [":time_slot_proto",],
)

java_proto_library(
    name = "activities_java_proto",
    deps = [":activities_proto",],
)

java_proto_library(
    name = "entities_java_proto",
    deps = [":entities_proto",],
)

java_proto_library(
    name = "event_reference_java_proto",
    deps = [":event_reference_proto",],
)

java_proto_library(
    name = "errors_java_proto",
    deps = [":errors_proto",],
)

java_proto_library(
    name = "tags_java_proto",
    deps = [":tags_proto",],
)

java_proto_library(
    name = "utils_java_proto",
    deps = [":utils_proto",],
)

java_proto_library(
    name = "headers_java_proto",
    deps = [":headers_proto",],
)

java_proto_library(
    name = "user_details_java_proto",
    deps = [":user_details_proto",],
)

java_proto_library(
    name = "crop_enums_java_proto",
    deps = [":crop_enums_proto",],
)

java_proto_library(
    name = "geo_enums_java_proto",
    deps = [":geo_enums_proto",],
)

java_proto_library(
    name = "geo_common_java_proto",
    deps = [":geo_common_proto",],
)

java_proto_library(
    name = "ai_enums_java_proto",
    deps = [":ai_enums_proto",],
)

#java_library(
#    name = "common_enums_java",
#    srcs = [":common_enums_java_proto"],
#)

# Java libs
#java_proto_library(
#    name = "contracts_common_defs",
#    protos = [":protos"],
#    proto_deps = [
#        "@com_google_protobuf//:timestamp_proto",
#        "@com_google_protobuf//:duration_proto",
#    ]
#
#)

java_proto_library(
    name = "common_enums_agg_java_proto",
    deps = [
        ":common_enums_proto",
        ":reward_enums_proto",
        ":loyalty_enums_proto",
        ":errors_proto",
        ":tags_proto",
        ":time_slot_proto",
        ":activities_proto",
        ":entities_proto",
        ":event_reference_proto",
        ":utils_proto",
        ":headers_proto",
        ":user_details_proto",
        ":geo_common_proto",
        ":crop_enums_proto",
        ":geo_enums_proto",
        ":ai_enums_proto"
    ],

)

#java_library(
#    name = "contracts_common_defs",
#    srcs = [":common_enums_java_proto",],
##    srcs = [":common_enums_java_proto", ":time_slot_java_proto", ":event_reference_java_proto"],
#)

# Go protos


go_proto_library(
    name = "common_enums_all_go_proto",
    protos = [
        ":common_enums_proto",
        ":reward_enums_proto",
        ":loyalty_enums_proto",
        ":tags_proto",
        ":errors_proto",
        ":time_slot_proto",
        ":entities_proto",
        ":activities_proto",
        ":event_reference_proto",
        ":utils_proto",
        ":headers_proto",
        ":user_details_proto",
        ":geo_common_proto",
        ":crop_enums_proto",
        ":geo_enums_proto",
        ":ai_enums_proto"
    ],
    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "github.com/nurture-farm/Contracts/Common/Gen/GoCommon",
)

#py_proto_library(
#    name = "common_enums_all_py_proto",
#    srcs = [
#        "enums.proto",
#        "reward_enums.proto",
#        "loyalty_enums.proto",
#        "tags.proto",
#        "errors.proto",
#        "time_slot.proto",
#        "entities.proto",
#        "activities.proto",
#        "event_reference.proto",
#        "utils.proto",
#        "headers.proto",
#        "user_details.proto",
#        "geo_common.proto",
#        "geo_enums.proto",
#        "ai_enums.proto",
#    ],
#    deps = ["@com_google_protobuf//:protobuf_python"],
#
##    use_grpc_plugin = True,
#)

#py_proto_library(
#    name = "common_enums_all_py_proto",
#    srcs = [
#        ":common_enums_proto",
#        ":reward_enums_proto",
#        ":loyalty_enums_proto",
#        ":tags_proto",
#        ":errors_proto",
#        ":time_slot_proto",
#        ":entities_proto",
#        ":activities_proto",
#        ":event_reference_proto",
#        ":utils_proto",
#        ":headers_proto",
#        ":user_details_proto",
#        ":geo_common_proto",
#        ":geo_enums_proto",
#        "ai_enums.proto",
#    ],
#    deps = [
#        "@com_google_protobuf//:duration_proto",
#        "@com_google_protobuf//:timestamp_proto",
#    ],
#)


# Python definitions
py_proto_library(
    name = "common_enums_py_proto",
    deps = [":common_enums_proto",],
)

py_proto_library(
    name = "reward_enums_py_proto",
    deps = [":reward_enums_proto",],
)

py_proto_library(
    name = "loyalty_enums_py_proto",
    deps = [":loyalty_enums_proto",],
)


py_proto_library(
    name = "time_slot_py_proto",
    deps = [":time_slot_proto",],
)

py_proto_library(
    name = "activities_py_proto",
    deps = [":activities_proto",]
)

py_proto_library(
    name = "entities_py_proto",
    deps = [":entities_proto",]
)

py_proto_library(
    name = "event_reference_py_proto",
    deps = [":event_reference_proto",],
)

py_proto_library(
    name = "errors_py_proto",
    deps = [":errors_proto",],
)

py_proto_library(
    name = "utils_py_proto",
    deps = [":utils_proto", ],
)

py_proto_library(
    name = "headers_py_proto",
    deps = [":headers_proto", ],
)

py_proto_library(
    name = "user_details_py_proto",
    deps = [":user_details_proto", ],
)

py_proto_library(
    name = "crop_enums_py_proto",
    deps = [":crop_enums_proto",],
)

py_proto_library(
    name = "geo_enums_py_proto",
    deps = [":geo_enums_proto",],
)

py_proto_library(
    name = "geo_common_py_proto",
    deps = [":geo_common_proto",],
)

py_proto_library(
    name = "ai_enums_py_proto",
    deps = [":ai_enums_proto",],
)


## Python GRPC libraries
#py_grpc_library(
#    name = "common_enums_py_grpc",
#    srcs = [":common_enums_proto"],
#    deps = [":common_enums_py_proto"],
#)
#
#py_grpc_library(
#    name = "reward_enums_py_grpc",
#    srcs = [":reward_enums_proto"],
#    deps = [":reward_enums_py_proto"],
#)
#
#py_grpc_library(
#    name = "loyalty_enums_py_grpc",
#    srcs = [":loyalty_enums_proto"],
#    deps = [":loyalty_enums_py_proto"],
#)
#
#py_grpc_library(
#    name = "time_slot_py_grpc",
#    srcs = [":time_slot_proto"],
#    deps = [":time_slot_py_proto"],
#)
#
#py_grpc_library(
#    name = "activities_py_grpc",
#    srcs = [":activities_proto"],
#    deps = [":activities_py_proto"],
#)
#
#py_grpc_library(
#    name = "entities_py_grpc",
#    srcs = [":entities_proto"],
#    deps = [":entities_py_proto"],
#)
#
#py_grpc_library(
#    name = "event_reference_py_grpc",
#    srcs = [":event_reference_proto"],
#    deps = [":event_reference_py_proto"],
#)
#
#py_grpc_library(
#    name = "errors_py_grpc",
#    srcs = [":errors_proto"],
#    deps = [":errors_py_proto"],
#)
#
#py_grpc_library(
#    name = "utils_py_grpc",
#    srcs = [":utils_proto"],
#    deps = [":utils_py_proto"],
#)
#
#py_grpc_library(
#    name = "headers_py_grpc",
#    srcs = [":headers_proto"],
#    deps = [":headers_py_proto"],
#)
#
#py_grpc_library(
#    name = "user_details_py_grpc",
#    srcs = [":user_details_proto"],
#    deps = [":user_details_py_proto"],
#)
#
#py_grpc_library(
#    name = "geo_enums_py_grpc",
#    srcs = [":geo_enums_proto"],
#    deps = [":geo_enums_py_proto"],
#)
#
#py_grpc_library(
#    name = "geo_common_py_grpc",
#    srcs = [":geo_common_proto"],
#    deps = [":geo_common_py_proto"],
#)
#
#
# py_grpc_library(
#    name = "ai_enums_py_grpc",
#    srcs = [":ai_enums_proto"],
#    deps = [":ai_enums_py_proto"],
# )

