load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

# Proto definitions
proto_library(
    name = "event_portal_proto",
    srcs = ["event_portal.proto"],
    deps = [
        "//Common:common_enums_proto",
        "//Common:headers_proto",
        "//Common:utils_proto",
        "//Common:entities_proto",
        "@com_google_protobuf//:timestamp_proto",
    ]
)

#cc_proto_library(
#    name = "event_portal_cc_proto",
#    deps = [":event_portal_proto"],
#)

#cc_grpc_library(
#    name = "event_portal_cc_grpc",
#    srcs = [":event_portal_proto"],
#    grpc_only = True,
#    deps = [":event_portal_cc_proto"],
#)

java_proto_library(
    name = "event_portal_java_proto",
    deps = [":event_portal_proto"],
)

java_grpc_library(
    name = "event_portal_java_grpc",
    srcs = [":event_portal_proto"],
    deps = [":event_portal_java_proto"],
)

go_proto_library(
    name = "event_portal_go_proto",

    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "code.nurture.farm/Core/Contracts/EventPortal/Gen/GoEventPortal",

    protos = [":event_portal_proto",],
    deps = [
        "//Common:common_enums_all_go_proto",
    ],
)

